# LucidGTK

./: AUTHORS  INSTALL  README.md  VideoWindow.py  configure.ac  dream.py  settings.json  settingsWin.py
data/: Makefile.am  org.rebelweb.dreamer.gschema.xml
data/icons/hicolor/: Makefile.am
data/icons/hicolor/256x256/apps/: Makefile.am
data/icons/hicolor/48x48/apps/: Makefile.am
data/icons/hicolor/scalable/apps/: Makefile.am
src/: Makefile.am  lucid-gtk.in
src/lucidgtk/: DeepDream.py  GlobalMenu.py  Makefile.am  Media.py  SequencerWindow.py  SettingsWindow.py  VideoWindow.py  dream.py  sequencerWindow.py  settingsWin.py
