AC_INIT([Lucid-GTK], [0.1.3-beta])

AM_INIT_AUTOMAKE
AM_PATH_PYTHON([2.7])

GLIB_GSETTINGS 

AC_CONFIG_FILES([
Makefile 
src/Makefile 
src/lucidgtk/Makefile 
data/Makefile
data/icons/Makefile
data/icons/hicolor/Makefile
data/icons/hicolor/256x256/Makefile
data/icons/hicolor/256x256/apps/Makefile
data/icons/hicolor/48x48/Makefile
data/icons/hicolor/48x48/apps/Makefile
data/icons/hicolor/scalable/Makefile
data/icons/hicolor/scalable/apps/Makefile
])



AC_OUTPUT
